# killranswers

./: .gitignore  Cargo.toml  LICENSE.md  LICENSE.txt  README.md  TODO.txt  admin.py  api.py  build.rs  killranswers.capnp  requirements.txt
docs/: Makefile  architecture.md  conf.py  index.md  index.rst  quickstart.md
killranswers/: __init__.py  connections.py  models.py  routes.py
killranswers/answers/: models.py
killranswers/categories/: __init__.py  models.py
killranswers/questions/: models.py
killranswers/ratings/: models.py
killranswers/users/: models.py
src/: main.rs
tests/: conftest.py  full_client_test.py  test_answers.py  test_categories.py  test_questions.py  test_users.py
